# MetricBot

./: .dockerignore  .gitignore  CLAUDE.md  PROJECT_MODULES.md  README.md  README_cn.md  docker-compose.yaml  package.json  test_model_management.js  test_results.json
backend/: .env.example  Dockerfile  init_db.py  install_deps.py  install_remaining.py  main.py  pyproject.toml  pytest.ini  requirements.txt  run_tests.bat  run_tests.py  run_tests_subprocess.py  test_log_chain.py  test_output.txt
backend/apps/alert/: models.py  router.py  schemas.py
backend/apps/alert/aggregation/: __init__.py  engine.py  scheduler.py
backend/apps/alert/diagnosis/: __init__.py  analyzer.py
backend/apps/alert/engine/: __init__.py  evaluator.py  scheduler.py
backend/apps/alert/migrations/: add_alert_event_fields.py  add_alert_tables.py  add_phase2_tables.py
backend/apps/alert/rca/: __init__.py  engine.py
backend/apps/auth/: models.py  router.py  schemas.py  security.py
backend/apps/datasource/: models.py  router.py  schemas.py
backend/apps/host/: models.py  router.py  schemas.py
backend/apps/log/: models.py  router.py  schemas.py
backend/apps/model/: models.py  router.py  schemas.py
backend/apps/simulator/: __init__.py  models.py  router.py  schemas.py
backend/apps/simulator/engine/: __init__.py  fault_engine.py  log_generator.py  metric_generator.py  topology_generator.py  topology_manager.py
backend/apps/simulator/tasks/: __init__.py  scheduler.py
backend/common/core/: database.py  websocket.py
backend/tests/: conftest.py  test_alerts.py  test_auth.py  test_simple.py
(+79 files in other folders)
