[project]
name = "metric-bot"
version = "0.1.0"
description = "Metric Bot - 智能运维监控平台"
requires-python = ">=3.6"
dependencies = [
    "fastapi<0.69.0,>=0.68.0",
    "uvicorn<0.16.0,>=0.15.0",
    "pydantic<2.0.0,>=1.8.0",
    "python-dotenv<1.0.0,>=0.19.0",
    "httpx<0.20.0,>=0.19.0",
    "pyyaml<6.0.0,>=5.4.0",
    "sqlalchemy<1.5.0,>=1.4.0",
    "pymysql<1.1.0,>=1.0.0",
    "python-jose[cryptography]<3.4.0,>=3.3.0",
    "passlib[bcrypt]<1.8.0,>=1.7.0",
    "python-multipart<0.0.6,>=0.0.5",
    "apscheduler<4.0.0,>=3.10.0",
    "prometheus-client<0.18.0,>=0.17.0",
    "faker<20.0.0,>=19.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest<8.0.0,>=7.4.0",
    "ruff<1.0.0,>=0.2.0",
    "black<25.0.0,>=24.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]